--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.03.04 01:10:11<br />
+<b>start</b> - 2023.03.04 06:41:04<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -245,4 +245,22 @@ UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
 UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
 UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, -0.8299999999999983<br />
 UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, <b>updated</b>, 152, <a href="https://www.munzee.com/map/gcpupqjhp/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_AddingtonSunflowerGarden.json" target="_blank">json</a><br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat kihagyva (100%), <br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -42.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, <b>updated</b>, 122, <a href="https://www.munzee.com/map/gcpupqxt9/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Fox.json" target="_blank">json</a><br />
