--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.03.04 06:41:04<br />
+<b>start</b> - 2023.03.04 08:45:42<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -263,7 +263,7 @@ Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
 Hungary_Debrecen kihagyva (100%), <br />
 Hungary_DeoCachingClan kihagyva (100%), <br />
 Hungary_TocoskertsArrows kihagyva (100%), <br />
-UnitedKingdom_WoodlandAnimals-Fox, <b>updated</b>, 122, <a href="https://www.munzee.com/map/gcpupqxt9/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Fox.json" target="_blank">json</a><br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
 UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
 Canada_OttawaCancerRibbon kihagyva (100%), <br />
 Canada_OttawaGoldfish kihagyva (100%), <br />
@@ -416,7 +416,7 @@ Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 1.0<br />
 Germany_PatchworkRT, not updated, 0.060000000000002274<br />
-Germany_FlatsAppenzellerRT, <b>updated</b>, 2313, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
+Germany_FlatsAppenzellerRT, not updated, 0.0<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
 Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
@@ -748,7 +748,7 @@ Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
-Portugal_Saab9xInMadeira, <b>updated</b>, 107, <a href="https://www.munzee.com/map/etu1c7ttr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_Saab9xInMadeira.json" target="_blank">json</a><br />
+Portugal_Saab9xInMadeira, not updated, 0.0<br />
 Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
@@ -758,4 +758,103 @@ USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, not updated, 0.0<br />
 USA_SpyGlass kihagyva (100%), <br />
-USA_TiedUpInKnotzInRoundRock, <b>updated</b>, 143, <a href="https://www.munzee.com/map/9v6tbuxnn/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TiedUpInKnotzInRoundRock.json" target="_blank">json</a><br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.8999999999999915<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, not updated, 0.4900000000000091<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, not updated, 0.4700000000000024<br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret kihagyva (100%), <br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.0<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.3500000000000014<br />
+USA_GPumpkin kihagyva (100%), <br />
+USA_GPumpkinFlats, not updated, 0.0<br />
+USA_Mauhaus kihagyva (100%), <br />
+USA_GToyotaCrossbows, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.0<br />
+USA_GJewelBelt, not updated, 0.20999999999999375<br />
+USA_GEvoBelt, not updated, 0.3400000000000034<br />
+USA_GBypassMixed kihagyva (100%), <br />
+USA_G62WestEvo, not updated, 0.33000000000000007<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.39000000000000057<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.21000000000000085<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.10999999999999943<br />
+USA_OwensboroRiverboatFlats, not updated, 0.9499999999999997<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.990000000000002<br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees, <b>updated</b>, 365, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
