--- a/feladat.html
+++ b/feladat.html
@@ -853,3 +853,4 @@ USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.10999999999999943<br />
 USA_OwensboroRiverboatFlats, <b>updated</b>, 118, <a href="https://www.munzee.com/map/dndncu1bx/15.3009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_OwensboroRiverboatFlats.json" target="_blank">json</a><br />
+Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 180, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
