--- a/feladat.html
+++ b/feladat.html
@@ -908,3 +908,15 @@ UnitedKingdom_HeartBeatz kihagyva (100%), <br />
 USA_Scooter kihagyva (100%), <br />
 USA_YanktonIceCream kihagyva (100%), <br />
 UnitedKingdom_FlatsHideNSeek, <b>updated</b>, 413, <a href="https://www.munzee.com/map/gcn8wmup6/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatsHideNSeek.json" target="_blank">json</a> <b>100%</b><br />
+Australia_BendigoIcyPole kihagyva (100%), <br />
+USA_SouthPadreIslandKOA, not updated, 0.0<br />
+USA_HeartOfStCharles kihagyva (100%), <br />
+USA_ShawsGardenRose kihagyva (100%), <br />
+USA_WhiteCastleValentine kihagyva (100%), <br />
+USA_Ring kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
+USA_CampingAtTheLake kihagyva (100%), <br />
+UnitedKingdom_TiffyTheNewmarketTabbyCat, <b>updated</b>, 257, <a href="https://www.munzee.com/map/u1231n464/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TiffyTheNewmarketTabbyCat.json" target="_blank">json</a><br />
